@@ -1,14 +1,14 @@
 Package: GenSA
 Type: Package
 Title: R functions for Generalized Simulated Annealing
-Version: 1.0.0
-Date: 2011-11-25
+Version: 1.0.1
+Date: 2011-11-28
 Author: Sylvain Gubian, Yang Xiang, Brian Suomela, Julia Hoeng, PMP SA.
 Maintainer: Sylvain Gubian <DL.RSupport@pmi.com>
 Depends: R (>= 2.12.0)
 Description: This package searches for global minimum of a very complex non-linear objective function with a very large number of optima.
 License: GPL-2
 LazyLoad: yes
-Packaged: 2011-11-25 15:42:10 UTC; sgubian
+Packaged: 2011-11-28 17:31:16 UTC; sgubian
 Repository: CRAN
-Date/Publication: 2011-11-26 07:41:49
+Date/Publication: 2011-11-29 06:57:24
