@@ -1,19 +1,18 @@
-8171cff6a047f9ede30d8d3a16844a9b *DESCRIPTION
+e3d0041d77cac9d7752172764170c9ef *DESCRIPTION
 d2e82915fd7dd842e9a0d90ed72d6c1a *LICENSE
 3bdd59b7f3bfc0c927fa2818a1b7e6f5 *NAMESPACE
-03884c80cccc42810f8710d373728f34 *NEWS
+aa7b75bb46623b07b9d263d9fd145b0d *NEWS
 e985fdef8741f5fdfe623b502d157f86 *R/GenSA.R
-344a553879f294bc631d2dd5742f61d9 *configure.ac
 970e08daa8aef6157e26223bf5c44d06 *inst/CITATION
 c2f6c883f54027553f34e4b67f8d7126 *man/GenSA-package.Rd
-2525b6b03cd3524bcf6dbda68cc65467 *man/GenSA.Rd
-c33e1b5fb0a5299a52db105b942c2c6d *src/Caller.cpp
+0690c91b6e03214f05bb576ad774ee7f *man/GenSA.Rd
+36a832d3f4cc937a7616442920590626 *src/Caller.cpp
 addb9495a8f93c03034af00748f392ae *src/Caller.h
-b79266622e63ada125b6779bc2d835c1 *src/Engine.cpp
+c816a31ef9cd2bf788766ab69c5545ec *src/Engine.cpp
 e2e07a0dd30fee3fbe613059a431f14c *src/Engine.h
 a223d9a26b2ecbf8d0a57c444c24a339 *src/Makevars.in
 5d60dbd8970c557b2f25d8acf8d5ae05 *src/Makevars.win
 8803ae57f73d70d81c9bbf056ad8f122 *src/Tracer.cpp
 f78f905f6723c7fb6e74438a98b93c59 *src/Tracer.h
-5a6b03c9c1e7a4fef9ce26d786d3c678 *src/Utils.cpp
+19c84177633e2574b64ceabc2924328f *src/Utils.cpp
 608347053942bb6f685de177c81831b8 *src/Utils.h
